# TradingStrategyBacktester

./: .gitignore  Build.sh  CMakeLists.txt  Clear.sh  MathlinkBuild.sh  README.md
Backtester/: Backtester.sln  Backtester.vcxproj  Backtester.vcxproj.filters  CMakeLists.txt  backtester_models.cpp  backtester_models.h  cli_interface.cpp  csv_parser.h  dataset_loader.cpp  dataset_loader.h  dataset_types.h  filesystem.cpp  filesystem.h  functional_map.h  global_definitions.h  mathlink.tm  mathlink_interface.cpp  mathlinktm.cpp  progress_bar.h  strategy_evaluator.cpp  strategy_evaluator.h  technical_indicators.cpp  technical_indicators.h  utilities.h  vector_ops.h
Libraries/AngelScript/add_on/scriptarray/: Clear.sh  scriptarray.sln
Libraries/AngelScript/add_on/scriptbuilder/: Build.sh  scriptbuilder.sln
Libraries/AngelScript/add_on/scriptstdstring/: Build.sh  Clear.sh  scriptstdstring.sln
Libraries/AngelScript/angelscript/projects/gnuc/: Makefile
TestDataset/: AAPL.csv
dataset/: ZION.csv
include/: backtester.h  dataset.h  evaluator.h  filesystem.h  indicators.h  loader.h  returns.h  utilities.h  vector_ops.h
mathlink/: Example.nb  mathlink.tm  mathlink_interface.cpp
python/: TestingNotebook.ipynb  bindings.cpp  setup.py
python/tests/: test_backtester.py  test_loader.py
source/: backtester.cpp  evaluator.cpp  filesystem.cpp  indicators.cpp  loader.cpp  returns.cpp
tests/: test_backtester.cpp  test_filesystem.cpp  test_loader.cpp
